feat: make it so the sst realtime topics are user aware
so that users logged in don't get notified if the item inserted isn't
shared to them or public
